--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mongoose": "^6.2.8",
     "nodemon": "^2.0.15",
-    "rword": "^3.2.1"
+    "random-words": "^1.1.2"
   }
 }
